@@ -80,9 +80,7 @@ class DeletedMessage(NamedTuple):
     old_names: List[Tuple[str, str]] = []
 
 
-DELETED_MSGID_PREFIXES = [
-    16,  # the PY3K+ checker, see https://github.com/PyCQA/pylint/pull/4942
-]
+DELETED_MSGID_PREFIXES: List[int] = []
 
 DELETED_MESSAGES = [
     # Everything until the next comment is from the
@@ -139,7 +137,6 @@ DELETED_MESSAGES = [
     DeletedMessage("W1638", "range-builtin-not-iterating"),
     DeletedMessage("W1639", "filter-builtin-not-iterating"),
     DeletedMessage("W1640", "using-cmp-argument"),
-    DeletedMessage("W1641", "eq-without-hash"),
     DeletedMessage("W1642", "div-method"),
     DeletedMessage("W1643", "idiv-method"),
     DeletedMessage("W1644", "rdiv-method"),
