@@ -1,0 +1,2 @@
+[MASTER]
+load-plugins=pylint.extensions.eq_without_hash,
